--- a/lang/eo/LC_MESSAGES/kombilo.po
+++ b/lang/eo/LC_MESSAGES/kombilo.po
@@ -789,7 +789,7 @@ msgstr ""
 
 #: kombiloNG.py:1106
 msgid ""
-"A fatal error occured when processing %s. Are the directories for the "
+"A fatal error occurred when processing %s. Are the directories for the "
 "database files writable?"
 msgstr ""
 
@@ -871,7 +871,7 @@ msgid "split"
 msgstr ""
 
 #: v.py:707
-msgid "An error occured, please submit a bug report."
+msgid "An error occurred, please submit a bug report."
 msgstr ""
 
 #: v.py:1048 v.py:1952 v.py:2141
